syntax = "proto3";
option cc_enable_arenas = true;
package MayaLiveProto;

message string_float_pair {
	string name = 1;
	repeated float values = 2;
}

// Triangle indices for each group
message TriangleGroup {
	string key = 1;
	repeated uint32 values = 2;
}

// UV/Color vertex channel
message VertexChannel {
	string key = 1;
	uint32 elementCount = 2; // Should be 2(UV), 3(RGB) or 4(RGBA)
	repeated float values = 3;
}


message BoneData {
	repeated string_float_pair bone = 1;
}

message CurveData {
	repeated string_float_pair curve = 1;
}

message CameraData {
	float focalLength = 1;
	float verticalFilmAperture = 2;
	float horizontalFilmAperture = 3;
	float focusDistance = 4;
	float lenSqRation = 5;
	float aperture = 6;
	float nearClippingPlane = 7;
	float farClippingPlane = 8;
	bool isOrtho = 9;
	float orthoWidth = 10;
	bool isValid = 11;
	repeated float matrix = 12;
	float fieldOfView = 13;
	float aspectRatio = 14;
}

message Transform {
	float scaleX = 1;
	float scaleY = 2;
	float scaleZ = 3;
	float rotateX = 4;
	float rotateY = 5;
	float rotateZ = 6;
	float rotateW = 7;
	float translateX = 8;
	float translateY = 9;
	float translateZ = 10;
}

message GeometryHeader {
	Transform geomTransform = 1;
	uint64 geomDataTimestamp = 2;
}

message LumiCurveData {
	string key = 1;
	string contentPath = 2;
	bool visibility = 3;
	Transform curveTransform = 4;
	CurveData curves = 5;
}

message LumiCurveDataArray {
	repeated LumiCurveData curveGroup = 1;
}

message SkeletonBone {
	string name = 1;
	int32  parentIndex = 2;
	Transform matrix = 3;
}

message BlendShapeTarget {
	string name = 1;
	float weight = 2;
	repeated float vertex = 3;
	repeated float normal = 4;
}

message BlendShape {
	string name = 1;
	repeated BlendShapeTarget target = 2;
}

message BasePolyMeshData {
	string name = 2;
	bool visibility = 3;
	repeated float vertex = 4;
	repeated float normal = 5;
	repeated VertexChannel UVs = 6;
	repeated float tangent = 7;
	repeated VertexChannel vertexColors = 8;
	repeated TriangleGroup triangle = 10;
	repeated int32 boneIndices = 11;
	repeated float boneWeights = 12;
	repeated int32 boneIndexOffsets = 13;
	repeated SkeletonBone skeleton = 14;
	Transform meshTransform = 15;
	repeated int32 VertexAdjacentOffset = 16;
	repeated int32 vertexAdjacentIndices = 17;
	repeated BlendShape blendShape = 18;
	repeated int32 VertexIndex = 19;
}

message LodPolyMeshData {
    string name = 1;
    repeated BasePolyMeshData meshes = 2;
    repeated float lodPercent = 3;
    repeated uint64 timestamp = 4;
}

message LumiPolyMesh {
	string key = 1;
	string contentPath = 2;
	repeated BasePolyMeshData meshes = 3;
}

message LumiPolyMeshArray {
	repeated LumiPolyMesh meshGroup = 1;
}

message SHSkinWeight {
	repeated uint32 boneIndex = 1;
	repeated float weight = 2;
}

message SHVertexId {
	uint32 vertexId = 1;
	uint32 normalId = 2;
	uint32 tangentId = 3;
	uint32 uvId = 4;
	uint32 colorId = 5;
}

message SHTriangle {
	repeated SHVertexId vertexIds = 1;
	uint32 materialIndex = 2;
}

message SHUVset {
	repeated float u = 1;
	repeated float v = 2;
}

message LiveLinkSHMesh {
	string meshName = 1;
	repeated string materialNames = 2;
	repeated float vertics = 3;
	repeated SHSkinWeight skins = 4;
	repeated fixed32 colors = 5;
	repeated float normals = 6;
	repeated float tangents = 7;
	repeated SHUVset uvsets = 8;
	repeated SHTriangle tiangles = 10;
}

message LiveLinkSHMeshArray {
	string assetName  = 1;
	repeated string boneNames = 2;
	repeated LiveLinkSHMesh meshs = 3;
}

message TopicNameList {
	repeated string topicTypes = 1;
	repeated string topicNames = 2;
}

message SkeletalData {
	repeated string_float_pair bones = 1;
	repeated string_float_pair curves = 2;
}
